--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body {
     font-size: 14px;
     line-height: 24px;
     color: #f7f4f1;  
-    font-family: "PT Sans", "Arial", serif;
+    font-family: "PT Sans", "Arial", serif;	
+		background: #070707;
 }
 
 h1 {
@@ -14,11 +15,154 @@ h1 {
 h2 {
     font-size: 30px;
     line-height: 42px;
-    color: #000000;
+    color: #f7f4f1;
 }
 
-h3 {
-    font-size: 24px;
-    line-height: 30px;
-    color: #000000;
+article h2 {
+		font-size: 14px;
+		line-height: 18px;
+		color: #f7f4f1;
+		font-family: "PT Sans", "Arial", serif;	
+}
+
+.clearfix::after {
+		content: "";
+		display: table;
+		clear: both;
+}
+
+.container {
+		width: 940px;
+		padding: 0 10px;
+		margin: 0 auto;
+		
+}
+
+.main-header {
+		background: #000000;
+}
+
+.main-logo {
+		float: left;
+		width: 140px
+		margin-right: 20px;
+}
+
+.main-navigation {
+		float: left;
+		width: 780px;
+		min-height: 70px;
+		
+}
+
+.second-page-nav{
+		width: 540px;
+}
+
+.user-block {
+		float: right;
+		width: 140px;
+		min-height: 70px;
+		
+}
+
+.index-logo {		
+		width: 368px;
+		margin-top: 60px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 25px;
+		
+}
+
+.breadcrumbs {
+		margin-bottom: 55px;
+}
+
+
+.features {
+  	margin-bottom: 80px;
+		
+}
+
+.item {
+		float: left;
+		width: 220px;
+		margin-right: 15px;
+		min-height: 286px;
+}
+
+.no-margin {
+		margin-right: 0;
+}
+
+.product-features {
+		float: left;
+		width: 220px;
+		margin: 0;
+		min-height: 569px;
+}
+
+.features-item {
+  	float: left;
+  	width: 300px;
+  	min-height: 175px;
+  	margin-right: 20px;
+		
+}
+
+.pagination {
+		float: left;
+}
+
+.features-item:last-child {
+  	margin-right: 0;
+}
+
+.content {
+		float: right;
+		width: 691px;
+}
+
+.index-content {
+  	margin-bottom: 35px;
+  	padding: 50px 80px;
+}
+
+.index-content-left {
+  	float: left;
+  	width: 380px;
+  	min-height: 330px;
+}
+
+.index-content-right {
+  	float: right;
+  	width: 300px;
+  	min-height: 330px;
+}
+
+.main-footer {
+  	margin-top: 65px;
+  	padding-top: 60px;
+  	padding-bottom: 40px;
+		background: #242424;
+}
+
+.footer-contacts {
+  	float: left;
+  	width: 320px;
+  	margin-right: 60px;
+  	min-height: 90px;
+}
+
+.footer-social {
+  	float: left;
+  	width: 180px;
+  	min-height: 90px;
+}
+
+.footer-copyright {
+  	float: right;
+  	width: 180px;
+  	min-height: 90px;
 }
