Создание сетки страниц Барбершопа
Сделано криво и косо)

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,15 @@ article h2 {
 		
 }
 
+.main-navigation li {
+	display: inline-block;
+	width: 100px;
+	margin-left: 10px;
+	
+}
+
 .second-page-nav{
-		width: 540px;
+		width: 640px; 
 }
 
 .user-block {
@@ -79,17 +86,60 @@ article h2 {
 		margin-bottom: 55px;
 }
 
+.breadcrumbs li {
+		display: inline-block;
+		margin-right: 40px;
+}
+
 
 .features {
   	margin-bottom: 80px;
 		
 }
 
+form li {
+	margin-bottom: 15px;
+}
+
+form legend {
+	margin-bottom: 30px;
+}
 .item {
 		float: left;
 		width: 220px;
 		margin-right: 15px;
 		min-height: 286px;
+}
+
+.item-photos {
+		float: left;
+		width: 470px;
+}
+
+.item-photos img {
+		margin-bottom: 20px;
+}
+
+.item-photos-small img{
+		width: 140px;
+		padding-right: 14px;
+}
+
+.item-photos-small:nth-last-child {
+		padding-right: 0;
+}
+
+.item-features {
+		float: right;
+		width: 410px;
+		padding: 0 10px;
+}
+
+.item-description {
+	margin-bottom: 60px;
+}
+.item-description p {
+		margin-bottom: 40px;
 }
 
 .no-margin {
@@ -111,6 +161,21 @@ article h2 {
 		
 }
 
+.order-info {
+		margin-bottom: 40px;
+}
+
+.item-existance {
+		float: left;
+}
+
+.item-article {
+		float: right;
+}
+
+.item-kit h2 {
+	margin-bottom: 35px;
+}
 .pagination {
 		float: left;
 }
@@ -141,6 +206,15 @@ article h2 {
   	min-height: 330px;
 }
 
+
+.pagination li {
+		display: inline-block;
+		width: 47px;
+		height: 43px;
+		margin-right: 7px;
+		background: #ffffff;
+}
+	
 .main-footer {
   	margin-top: 65px;
   	padding-top: 60px;
@@ -165,4 +239,8 @@ article h2 {
   	float: right;
   	width: 180px;
   	min-height: 90px;
+}
+
+.inline {
+		display: inline-block;
 }
