--- a/css/style.css
+++ b/css/style.css
@@ -18,229 +18,180 @@ h2 {
     color: #f7f4f1;
 }
 
-article h2 {
-		font-size: 14px;
-		line-height: 18px;
-		color: #f7f4f1;
-		font-family: "PT Sans", "Arial", serif;	
+html,
+body {
+  min-width: 1122px;
+  margin: 0;
+  padding: 0;
 }
 
 .clearfix::after {
-		content: "";
-		display: table;
-		clear: both;
+  content: "";
+
+  display: table;
+  clear: both;
 }
 
 .container {
-		width: 940px;
-		padding: 0 10px;
-		margin: 0 auto;
-		
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .main-header {
-		background: #000000;
-}
-
-.main-logo {
-		float: left;
-		width: 140px
-		margin-right: 20px;
+  margin-bottom: 60px;
 }
 
 .main-navigation {
-		float: left;
-		width: 780px;
-		min-height: 70px;
-		
+  float: left;
+  width: 780px;
+  min-height: 70px;
+	font-size: 0;
 }
+
+
 
 .main-navigation li {
 	display: inline-block;
-	width: 100px;
-	margin-left: 10px;
-	
-}
-
-.second-page-nav{
-		width: 640px; 
+	margin-right: 40px;
+	font-size: 14px;
 }
 
 .user-block {
-		float: right;
-		width: 140px;
-		min-height: 70px;
-		
+  float: right;
+  width: 140px;
+  min-height: 70px;
 }
 
-.index-logo {		
-		width: 368px;
-		margin-top: 60px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 25px;
-		
+.index-logo {
+  width: 368px;
+  min-height: 204px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 25px;
 }
-
-.breadcrumbs {
-		margin-bottom: 55px;
-}
-
-.breadcrumbs li {
-		display: inline-block;
-		margin-right: 40px;
-}
-
 
 .features {
-  	margin-bottom: 80px;
-		
-}
-
-form li {
-	margin-bottom: 15px;
-}
-
-form legend {
-	margin-bottom: 30px;
-}
-.item {
-		float: left;
-		width: 220px;
-		margin-right: 15px;
-		min-height: 286px;
-}
-
-.item-photos {
-		float: left;
-		width: 470px;
-}
-
-.item-photos img {
-		margin-bottom: 20px;
-}
-
-.item-photos-small img{
-		width: 140px;
-		padding-right: 14px;
-}
-
-.item-photos-small:nth-last-child {
-		padding-right: 0;
-}
-
-.item-features {
-		float: right;
-		width: 410px;
-		padding: 0 10px;
-}
-
-.item-description {
-	margin-bottom: 60px;
-}
-.item-description p {
-		margin-bottom: 40px;
-}
-
-.no-margin {
-		margin-right: 0;
-}
-
-.product-features {
-		float: left;
-		width: 220px;
-		margin: 0;
-		min-height: 569px;
+  margin-bottom: 80px;
 }
 
 .features-item {
-  	float: left;
-  	width: 300px;
-  	min-height: 175px;
-  	margin-right: 20px;
-		
-}
-
-.order-info {
-		margin-bottom: 40px;
-}
-
-.item-existance {
-		float: left;
-}
-
-.item-article {
-		float: right;
-}
-
-.item-kit h2 {
-	margin-bottom: 35px;
-}
-.pagination {
-		float: left;
+  float: left;
+  width: 300px;
+  min-height: 175px;
+  margin-right: 20px;
 }
 
 .features-item:last-child {
-  	margin-right: 0;
-}
-
-.content {
-		float: right;
-		width: 691px;
+  margin-right: 0;
 }
 
 .index-content {
-  	margin-bottom: 35px;
-  	padding: 50px 80px;
+  margin-bottom: 35px;
+  padding: 50px 80px;
 }
 
 .index-content-left {
-  	float: left;
-  	width: 380px;
-  	min-height: 330px;
+  float: left;
+  width: 380px;
+  min-height: 330px;
 }
 
 .index-content-right {
-  	float: right;
-  	width: 300px;
-  	min-height: 330px;
+  float: right;
+  width: 300px;
+  min-height: 330px;
 }
 
-
-.pagination li {
-		display: inline-block;
-		width: 47px;
-		height: 43px;
-		margin-right: 7px;
-		background: #ffffff;
-}
-	
 .main-footer {
-  	margin-top: 65px;
-  	padding-top: 60px;
-  	padding-bottom: 40px;
-		background: #242424;
+  margin-top: 65px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+	background-color: #1f1f1f;
 }
 
 .footer-contacts {
-  	float: left;
-  	width: 320px;
-  	margin-right: 60px;
-  	min-height: 90px;
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+  min-height: 90px;
 }
 
 .footer-social {
-  	float: left;
-  	width: 180px;
-  	min-height: 90px;
+  float: left;
+  width: 180px;
+  min-height: 90px;
 }
 
 .footer-copyright {
-  	float: right;
-  	width: 180px;
-  	min-height: 90px;
+  float: right;
+  width: 180px;
+  min-height: 90px;
 }
 
-.inline {
-		display: inline-block;
+
+//стили второй страницы
+
+.main-logo {
+	float: left;
 }
+			
+.next-page-navigation {
+	width: 620px;
+}
+
+.catalog-main {
+	padding-top: 55px;
+	color: #000000;
+	background-color: #f7f4f1;
+}
+
+.catalog-h1 {
+	margin-bottom: 30px;
+	
+}
+
+.breadcrumbs {
+	font-size: 0;
+	margin-bottom: 55px;
+}
+
+.breadcrumbs ul {
+	padding: 0;
+}
+.breadcrumbs li {
+	display: inline-block;
+	margin-right: 45px;
+	font-size: 14px;
+}
+
+.product-features {
+	float:left;
+	width: 230px;
+	margin-right: 10px;
+}
+
+.products {
+	float: right;
+	width: 700px;	
+	font-size: 0;
+}
+
+.product-item {
+	display: inline-block;
+	width: 220px;
+	margin-right: 20px;
+}
+
+.product-item:nth-of-type(3n)
+{
+	margin-right: 0;
+}
+
+.catalog-h2 {
+	width: 160px;
+	line-height: 18px;
+	font-size: 14px;
+	color: #000000;
+}
+
