--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,20 @@
 body {
-    font-size: 14px;
-    line-height: 24px;
-    color: #f7f4f1;  
-    font-family: "PT Sans", "Arial", serif;	
-		background: #070707;
+  min-width: 960px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background: #000000 url("img/body-bg.jpg") no-repeat center top;
 }
 
-h1 {
-    font-size: 30px;
-    line-height: 42px;
-    color: #000000;
-}
+.inner-page {
+  color: #000000;
 
-h2 {
-    font-size: 30px;
-    line-height: 42px;
-    color: #f7f4f1;
-}
-
-
-
-html,
-body {
-  min-width: 1122px;
-  margin: 0;
-  padding: 0;
+  background: #f8f3f0 url("img/pattern-white.jpg") repeat;
 }
 
 .clearfix::after {
@@ -42,33 +32,145 @@ body {
 
 .main-header {
   margin-bottom: 60px;
+  
+  color: #ffffff;
+  
+  background-color: #000000;
+}
+
+.inner-page .main-header {
+  margin-bottom: 55px;
 }
 
 .main-navigation {
   float: left;
-	margin-top: 25px;
   width: 780px;
-	font-size: 0;
 }
 
-.main-navigation-li {
-	display: inline-block;
-	margin-right: 40px;
-	font-size: 14px;
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li {
+  display: inline-block;
+
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 25px 20px;
+  
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.main-navigation a:hover {
+  background: #242424;
+}
+
+.main-navigation .active {
+  position: relative;
+
+  background-color: none;
+}
+
+.main-navigation .active a:hover {
+  background: none;
+}
+
+.main-navigation .active::after {
+  content: "";
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  left: 20px;
+
+  height: 5px;
+
+  background-color: #ffffff;
+}
+
+/* Вложенность 3, но при желании можно уменьшить */
+
+.main-navigation .active span {
+  display: block;
+  padding: 25px 20px;
+}
+
+.main-navigation .logo-inner {
+  float: left;
+  width: 111px;
+  height: 20px;
+  padding-top: 22px;
+}
+
+.main-navigation .logo-inner img{
+  width: 111px;
+  height: 24px;
+}
+
+.main-navigation .logo-inner:hover {
+  background: none;
 }
 
 .user-block {
   float: right;
-	margin-top: 25px;
-  width: 140px;
+  max-width: 140px;
+}
+
+.login {
+  position: relative;
+  
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+  
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.login:hover {
+  background-color: #242424;
+}
+
+.login::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 20px;
+
+  width: 18px;
+  height: 18px;
+
+  background: transparent url("../img/sprites.png") no-repeat;
+  background-position: -10px -94px;
+  opacity: 0.3;
+}
+
+.login:hover::before {
+  opacity: 1;
 }
 
 .index-logo {
   width: 368px;
-  min-height: 204px;
-  margin-right: auto;
-  margin-left: auto;
+  height: 204px;
+  margin: 0 auto;
   margin-bottom: 25px;
+}
+
+.index-logo img {
+  width: 368px;
+  height: 204px;
 }
 
 .features {
@@ -78,74 +180,507 @@ body {
 .features-item {
   float: left;
   width: 300px;
-  min-height: 175px;
   margin-right: 20px;
+
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-name {
+  position: relative;
+
+  display: block;
+  margin-bottom: 30px;
+  padding-bottom: 35px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.features-item p {
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.features-name::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+
+  background-color: #ffffff;
+  transform: rotate(45deg);
+}
+
 .index-content {
   margin-bottom: 35px;
   padding: 50px 80px;
+
+  color: #000000;
+
+  background: url("../img/index-content-shadow.png") no-repeat center,
+  #f8f5f2 url("../img/pattern-white.jpg");
 }
 
 .index-content-left {
   float: left;
   width: 380px;
-  min-height: 330px;
 }
 
 .index-content-right {
   float: right;
   width: 300px;
-  min-height: 330px;
+}
+
+.index-content-title {
+  margin: 0;
+  margin-bottom: 25px;
+  
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+  padding-right: 35px;
+
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview p {
+  margin-bottom: 0;
+}
+
+.news-preview time {
+  text-transform: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 33px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  
+  background-color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+  background-color: #000000;
+}
+
+.gallery {
+  position: relative;
+
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
+  
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.appointment-form input:focus {
+  border: 2px solid #663d15;
+}
+
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
+}
+
+/* Стили внутренних страниц */
+
+.inner-page-title {
+  margin-bottom: 55px;
+}
+
+.inner-page-title h1 {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.breadcrumbs {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.breadcrumbs li {
+  position: relative;
+  display: inline;
+  padding-right: 40px;
+}
+
+.breadcrumbs li::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  right: 18px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.breadcrumbs a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+
+.breadcrumbs .current {
+  color: #aba9a7;
+}
+
+.breadcrumbs .current::after {
+  display: none;
+}
+
+/* Общие стили для контентных тегов */
+
+.inner-content {
+  margin-bottom: 75px;
+}
+
+.inner-content h2 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.inner-content p {
+  margin: 14px 0;
+}
+
+.inner-content table {
+  border-collapse: collapse;
+}
+
+.inner-content td {
+  padding: 10px 15px;
+
+  border: 2px solid #000000;
+}
+
+/* Особые стили для контентных тегов */
+
+.big-heading {
+  margin-top: 55px;
+  margin-bottom: 65px;
+
+  text-align: center;
+}
+
+.big-heading h2 {
+  position: relative;
+  z-index: 2;
+  
+  display: inline-block;
+  margin: 0;
+  padding: 0 25px;
+
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  
+  background: #f8f3f0 url("../img/pattern-white.jpg") repeat;
+}
+
+.big-heading::after {
+  content: "";
+  position: relative;
+  top: -25px;
+  z-index: 1;
+
+  display: block;
+
+  border-bottom: 2px solid #000000;
+}
+
+.custom-list-1 {
+  margin: 14px 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.custom-list-1 li {
+  position: relative;
+
+  margin-bottom: 15px;
+  padding-left: 20px;
+}
+
+.custom-list-1 li::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.prices-table {
+  width: 100%;
+}
+
+.prices-table td {
+  width: 50%;
+}
+
+.prices-table td:last-child {
+  text-align: center;
+}
+
+.short-text {
+  padding-right: 80px;
+}
+
+/* Колонки для контента */
+
+.inner-columns {
+  margin: 60px 0;
+}
+
+.inner-column-left,
+.inner-column-right {
+  width: 460px;
+}
+
+.inner-column-left {
+  float: left;
+}
+
+.inner-column-right {
+  float: right;
+}
+
+.inner-column-left *:first-child,
+.inner-column-right *:first-child {
+  margin-top: 0;
+}
+
+.inner-column-left *:last-child,
+.inner-column-right *:last-child {
+  margin-bottom: 0;
 }
 
 .main-footer {
+  margin-top: 65px;
   padding-top: 60px;
   padding-bottom: 40px;
-	background-color: #1f1f1f;
+
+  color: #ffffff; /* лучше явно прописать везде для футера */
+
+  background: #252525 url("../img/pattern-black.jpg");
 }
 
 .footer-contacts {
   float: left;
   width: 320px;
   margin-right: 60px;
-  min-height: 90px;
+}
+
+.footer-contacts a {
+  color: #ffffff;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
 }
 
 .footer-social {
   float: left;
   width: 180px;
-  min-height: 90px;
-	font-size: 0;
-}
 
-.footer-social p {
-	padding-left: 17px;
-	font-size: 14px;
-}
-
-.social-btn {
-	display: inline-block;
-	width: 43px;
-	margin-right: 6px;
-	padding-top: 15px;
-	background-color: #000000;
-	text-align: center;
-	
-}
-
-.social-btn:first-of-type {
-	padding-top: 20px;
+  text-align: center;
 }
 
 .footer-copyright {
   float: right;
-  width: 180px;
-  min-height: 90px;
+  max-width: 180px;
+}
+
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.social-btn {
+	position: relative;
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+	background-color: #000000;
+
+}
+
+.social-btn::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: #000000 url("../img/sprites.png") no-repeat center;
+}
+
+.social-btn:hover,
+.social-btn:hover::before {
+  background-color: #ffffff;
+}
+
+
+.social-btn-vk::before {
+	width: 25px;
+  height: 16px;
+  background-position: -10px -248px;
+}
+
+.social-btn-fb::before {
+	width: 12px;
+  height: 22px;
+  background-position: -10px -52px;
+}
+
+.social-btn-inst::before {
+	width: 21px;
+  height: 21px;
+  background-position: -10px -171px;
+}
+
+.social-btn-vk:hover::before {
+  background-position: -10px -212px;
+}
+
+.social-btn-fb:hover::before {
+  background-position: -10px -10px;
+}
+
+.social-btn-inst:hover::before {
+  background-position: -10px -130px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+.footer-copyright .btn:hover {
+  color: #000000;
+  background-color: #ffffff;
 }
 
 
@@ -165,7 +700,6 @@ body {
 }
 
 .catalog-main {
-	padding-top: 55px;
 	color: #000000;
 	background-color: #f7f4f1;
 }
@@ -246,7 +780,6 @@ body {
 	width: 220px;
 	margin-right: 20px;
 	margin-bottom: 20px;
-	
 }
 
 .product-item:nth-of-type(3n)
@@ -264,7 +797,7 @@ body {
 .item-price {
 	display: inline-block;
 	width: 110px;
-	padding: 15px 0;
+	padding: 10px 0;
 	text-align: center;
 	font-size: 14px;
 	background: #e5e5e5;
@@ -300,6 +833,8 @@ body {
 
 
 
+
+
 .item-photos {
 	float: left;
 	width: 460px;
@@ -311,7 +846,6 @@ body {
 }
 
 .item-photos-small {
-	margin-bottom: 45px;
 	font-size: 0;
 }
 
@@ -330,7 +864,8 @@ body {
 }
 
 .order-info {
-	margin-bottom: 40px;
+	margin-top: 23px;
+	margin-bottom: 33px;
 }
 
 .item-existance,
@@ -344,30 +879,43 @@ body {
 
 .item-article {
 	float: right;
+	color: #aba9a7;
 }
 
 .item-description {
 	font-size: 0;
-	margin-bottom: 55px;
+	margin-bottom: 63px;
 }
 
 .item-description-p {
-	margin-bottom: 40px;
+	margin-bottom: 38px;
 	font-size: 14px;
 }
 
 .catalog-item-h2 {
-	margin-bottom: 35px;
+	margin-bottom: 32px;
 	line-height: 30px;
 	font-size: 24px;
 	color: #000000;
 }
 
-.item-kit-list {
+.item-kit ul {
 	padding: 0;
+	list-style: none;
 }
 
-.item-kit-li {
-	margin-left: 20px;
-	
+.item-kit li {
+	position: relative;
+	padding-left: 20px;	
+}
+
+.item-kit li::before {
+	content: "";
+  position: absolute;
+  top: 8px;
+ 	left: 0;
+  width: 8px;
+  height: 8px;
+  transform: rotate(45deg);
+	background-color: #000000;
 }
