--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,21 @@
 body {
   min-width: 960px;
-
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
+	text-transform: uppercase;
   color: #ffffff;
-  text-transform: uppercase;
-
-  background: #000000 url("img/body-bg.jpg") no-repeat center top;
+  background: #000000 url("../img/main-bg.jpg") no-repeat center top;
 }
 
 .inner-page {
   color: #000000;
-
-  background: #f8f3f0 url("img/pattern-white.jpg") repeat;
+  background: #f8f3f0 url("../img/inner-bg.jpg") repeat;
 }
 
 .clearfix::after {
   content: "";
-
   display: table;
   clear: both;
 }
@@ -31,10 +27,8 @@ body {
 }
 
 .main-header {
-  margin-bottom: 60px;
-  
-  color: #ffffff;
-  
+  margin-bottom: 60px; 
+  color: #ffffff; 
   background-color: #000000;
 }
 
@@ -50,25 +44,22 @@ body {
 .main-navigation ul {
   margin: 0;
   padding: 0;
-
+	font-size: 0;
   list-style: none;
-  font-size: 0;
 }
 
 .main-navigation li {
   display: inline-block;
-
+	vertical-align: top;
   font-size: 16px;
   line-height: 20px;
-  vertical-align: top;
 }
 
 .main-navigation a {
   display: block;
   padding: 25px 20px;
-  
+	text-decoration: none;
   color: #ffffff;
-  text-decoration: none;
 }
 
 .main-navigation a:hover {
@@ -77,7 +68,6 @@ body {
 
 .main-navigation .active {
   position: relative;
-
   background-color: none;
 }
 
@@ -91,13 +81,9 @@ body {
   right: 20px;
   bottom: 0;
   left: 20px;
-
   height: 5px;
-
   background-color: #ffffff;
 }
-
-/* Вложенность 3, но при желании можно уменьшить */
 
 .main-navigation .active span {
   display: block;
@@ -126,17 +112,15 @@ body {
 }
 
 .login {
-  position: relative;
-  
+  position: relative;  
   display: inline-block;
+	vertical-align: top;
   padding: 25px 20px;
-  padding-left: 50px;
-  
+  padding-left: 50px;  
   font-size: 16px;
   line-height: 20px;
-  vertical-align: top;
+	text-decoration: none;
   color: #ffffff;
-  text-decoration: none;
 }
 
 .login:hover {
@@ -148,13 +132,11 @@ body {
   position: absolute;
   top: 28px;
   left: 20px;
-
   width: 18px;
   height: 18px;
-
+	opacity: 0.3;
   background: transparent url("../img/sprites.png") no-repeat;
   background-position: -10px -94px;
-  opacity: 0.3;
 }
 
 .login:hover::before {
@@ -181,7 +163,6 @@ body {
   float: left;
   width: 300px;
   margin-right: 20px;
-
   text-align: center;
 }
 
@@ -191,11 +172,9 @@ body {
 
 .features-name {
   position: relative;
-
   display: block;
   margin-bottom: 30px;
   padding-bottom: 35px;
-
   font-size: 30px;
   line-height: 42px;
 }
@@ -210,22 +189,19 @@ body {
   position: absolute;
   bottom: 0;
   left: 50%;
-
   display: block;
   width: 20px;
   height: 20px;
   margin-left: -10px;
-
+	-webkit-transform: rotate(45deg);
+	        transform: rotate(45deg);
   background-color: #ffffff;
-  transform: rotate(45deg);
 }
 
 .index-content {
   margin-bottom: 35px;
   padding: 50px 80px;
-
   color: #000000;
-
   background: url("../img/index-content-shadow.png") no-repeat center,
   #f8f5f2 url("../img/pattern-white.jpg");
 }
@@ -242,8 +218,7 @@ body {
 
 .index-content-title {
   margin: 0;
-  margin-bottom: 25px;
-  
+  margin-bottom: 25px; 
   font-size: 30px;
   line-height: 42px;
 }
@@ -257,7 +232,6 @@ body {
   margin: 0;
   padding: 0;
   padding-right: 35px;
-
   list-style: none;
 }
 
@@ -275,23 +249,21 @@ body {
 
 .btn {
   display: inline-block;
+	vertical-align: top;
   margin-right: 16px;
   padding: 10px 33px;
-
+	border: none;
+  outline: none;
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
-  vertical-align: top;
   text-align: center;
-  color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
-  
+	cursor: pointer;
+  color: #ffffff;
   background-color: #000000;
-  border: none;
-  outline: none;
-  cursor: pointer;
 }
 
 .btn:hover,
@@ -312,16 +284,14 @@ body {
 
 .gallery {
   position: relative;
-
   height: 260px;
 }
 
 .gallery-content {
   height: 164px;
   margin: 0;
-
+	border: 7px solid #ffffff;
   background-color: #cccccc;
-  border: 7px solid #ffffff;
 }
 
 .gallery-content img {
@@ -332,7 +302,6 @@ body {
 .gallery .btn {
   position: absolute;
   bottom: 0;
-
   width: 140px;
   margin: 0;
 }
@@ -351,16 +320,14 @@ body {
   margin-right: 20px;
   margin-bottom: 20px;
   padding: 7px 15px;
-
+	border: 2px solid #000000;
+  outline: none;
   font-size: 14px;
   line-height: 24px;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
-  color: #000000;
   text-transform: uppercase;
-  
+  color: #000000;
   background-color: #f9f6f3;
-  border: 2px solid #000000;
-  outline: none;
 }
 
 .appointment-form input:focus {
@@ -386,7 +353,6 @@ body {
   margin: 0;
   margin-bottom: 20px;
   padding: 0;
-
   font-size: 30px;
   line-height: 42px;
 }
@@ -394,7 +360,6 @@ body {
 .breadcrumbs {
   margin: 0;
   padding: 0;
-
   list-style: none;
 }
 
@@ -409,17 +374,16 @@ body {
   position: absolute;
   top: 4px;
   right: 18px;
-
   width: 8px;
   height: 8px;
-
+	-webkit-transform: rotate(45deg);
+	        transform: rotate(45deg);
   background-color: #000000;
-  transform: rotate(45deg);
 }
 
 .breadcrumbs a {
+	text-decoration: none;
   color: #000000;
-  text-decoration: none;
 }
 
 .breadcrumbs a:hover {
@@ -443,7 +407,6 @@ body {
 .inner-content h2 {
   margin-top: 60px;
   margin-bottom: 30px;
-
   font-size: 24px;
   line-height: 30px;
 }
@@ -458,7 +421,6 @@ body {
 
 .inner-content td {
   padding: 10px 15px;
-
   border: 2px solid #000000;
 }
 
@@ -467,22 +429,19 @@ body {
 .big-heading {
   margin-top: 55px;
   margin-bottom: 65px;
-
   text-align: center;
 }
 
 .big-heading h2 {
   position: relative;
-  z-index: 2;
-  
+  z-index: 2; 
   display: inline-block;
+	vertical-align: baseline;
   margin: 0;
   padding: 0 25px;
-
   font-size: 48px;
   line-height: 48px;
   text-align: center;
-  
   background: #f8f3f0 url("../img/pattern-white.jpg") repeat;
 }
 
@@ -491,22 +450,18 @@ body {
   position: relative;
   top: -25px;
   z-index: 1;
-
   display: block;
-
   border-bottom: 2px solid #000000;
 }
 
 .custom-list-1 {
   margin: 14px 0;
   padding: 0;
-
   list-style: none;
 }
 
 .custom-list-1 li {
   position: relative;
-
   margin-bottom: 15px;
   padding-left: 20px;
 }
@@ -516,12 +471,11 @@ body {
   position: absolute;
   top: 8px;
   left: 0;
-
   width: 8px;
   height: 8px;
-
+	-webkit-transform: rotate(45deg);
+	        transform: rotate(45deg);
   background-color: #000000;
-  transform: rotate(45deg);
 }
 
 .prices-table {
@@ -573,9 +527,7 @@ body {
   margin-top: 65px;
   padding-top: 60px;
   padding-bottom: 40px;
-
   color: #ffffff; /* лучше явно прописать везде для футера */
-
   background: #252525 url("../img/pattern-black.jpg");
 }
 
@@ -596,7 +548,6 @@ body {
 .footer-social {
   float: left;
   width: 180px;
-
   text-align: center;
 }
 
@@ -613,11 +564,11 @@ body {
 .social-btn {
 	position: relative;
   display: inline-block;
+	vertical-align: top;
   width: 43px;
   height: 43px;
   margin: 0 2px;
   font-size: 0;
-  vertical-align: top;
   text-decoration: none;
 	background-color: #000000;
 
@@ -628,7 +579,8 @@ body {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 	background: #000000 url("../img/sprites.png") no-repeat center;
 }
 
@@ -683,11 +635,7 @@ body {
   background-color: #ffffff;
 }
 
-
-
-
-
-
+/* страница catalog*/
 
 .main-logo {
 	float: left;
@@ -736,7 +684,10 @@ body {
 }
 
 .product-features fieldset {
+	margin: 0;
 	margin-bottom: 35px;
+	padding: 0;
+	border: none;
 }
 
 .product-features fieldset:first-child {
@@ -749,24 +700,90 @@ body {
 }
 
 .product-features label {
+	position: relative;
 	display: block;
-	margin-left: 20px;
-	margin-bottom:15px;
-	
+	margin-bottom:15px;	
+	padding-left: 43px;
+}
+
+.product-features a {
+	text-decoration: none;
+	color: #000000;
 }
 
 .product-features label:last-child {
 	margin-bottom: -10px;
 }
 
-.product-features input[type='submit'] {
-	width: 112px;
-	padding: 15px 0;
-	background-color: #000000;
-	line-height: 18px;
-	font-size: 13px;
-	color: #ffffff;
-	
+.product-features input[type="checkbox"] + .checkbox-indicator {
+	position: absolute;
+  top: 0;
+  left: 0;
+  width: 17px;
+  height: 17px;
+  border: 2px solid #000000;
+}
+
+.product-features input[type="checkbox"]:disabled + .checkbox-indicator {
+	opacity: 0.5;
+}
+
+.product-features input[type="checkbox"]:checked + .checkbox-indicator::before,
+.product-features input[type="checkbox"]:checked + .checkbox-indicator::after {
+	content: "";
+  position: absolute;
+	top: 7px;
+	left: -1px;
+  width: 19px;
+  height: 3px;
+	border-radius: 1px;
+  background-color: #000000;
+}
+
+.product-features input[type="checkbox"]:checked + .checkbox-indicator::before {
+	 -webkit-transform: rotate(45deg);
+	         transform: rotate(45deg);
+}
+
+.product-features input[type="checkbox"]:checked + .checkbox-indicator::after {
+	-webkit-transform: rotate(-45deg);
+	        transform: rotate(-45deg); 
+}
+
+.product-features input[type="checkbox"]:checked:disabled + .checkbox-indicator::before,
+.product-features input[type="checkbox"]:checked:disabled + .checkbox-indicator::after {
+	opacity: 0.5;
+}
+
+.product-features input[type="radio"] + .radio-indicator {
+	position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #000000;
+	border-radius: 50%;
+}
+
+.product-features input[type="radio"]:disabled + .radio-indicator {
+	opacity: 0.5;
+}
+
+.product-features input[type="radio"]:checked + .radio-indicator:before {
+	content: "";
+  position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	background-color: #000000;	
+}
+
+.product-features input[type="radio"]:checked:disabled + .radio-indicator:before {
+	opacity: 0.5;
 }
 
 .products {
@@ -780,6 +797,8 @@ body {
 	width: 220px;
 	margin-right: 20px;
 	margin-bottom: 20px;
+	box-shadow: 0px 0px 15px 0px rgba(0, 1, 1, 0.2);
+	background-color: #ffffff;
 }
 
 .product-item:nth-of-type(3n)
@@ -787,53 +806,84 @@ body {
 	margin-right: 0;
 }
 
+
+.product-item_container {
+	padding: 0 16px 16px 16px;
+	box-sizing: border-box;
+}
+
 .catalog-h2 {
-	width: 210px;
-	line-height: 18px;
+	margin-top: 0;
 	font-size: 14px;
+	line-height: 18px;
+	text-transform: none;
 	color: #000000;
+}
+
+.catalog-h2 a {
+	text-decoration: none;
+	color: #000000;
+}
+
+.product-name {
+	text-transform: uppercase;
+}
+
+.product-item .btn {
+	margin-right: 0;
+	padding: 10px 20px;
 }
 
 .item-price {
 	display: inline-block;
-	width: 110px;
+	width: 106px;
 	padding: 10px 0;
-	text-align: center;
 	font-size: 14px;
+	text-align: center;
 	background: #e5e5e5;
 }
 
-.buy-btn {
-	display: inline-block;
-	width: 80px;
-	padding: 15px 0;
-	text-align: center;
-	font-size: 14px;
-	background: #000000;
-}
-
-.pagination-list {
+.pagination ul {
 	margin-top: 25px;
 	margin-bottom: 45px;
 	padding: 0;
+	font-size: 0;
 }
 
-.pagination-li {
+.pagination li {
 	display: inline-block;
+	vertical-align: top;
+}
+
+.pagination a {
+	display: block;
 	width: 43px;
 	margin-right: 7px;
 	padding: 12px 0;
-	background-color: #000000;
-	text-align: center;
 	font-size: 14px;
+	text-align: center;
+	text-decoration: none;
+	color: #ffffff;
+	background-color: #000000;
+}
+
+.pagination a:hover,
+.pagination a:active {
+	background-color: #663d15;
+}
+
+.pagination .active-pg {
+	color: #000000;
+	background-color: #ffffff;
+}
+
+.pagination .active-pg:hover,
+.pagination .active-pg:active {
+	background-color: #ffffff;
 }
 
 
-
-
-
-
-
+/*Страница catalog-item*/
 
 .item-photos {
 	float: left;
@@ -845,6 +895,11 @@ body {
 	margin-bottom: 15px;
 }
 
+.item-photo-big img {
+	margin: 0;
+	box-shadow: 0px 0px 15px 0px rgba(0, 1, 1, 0.2);
+}
+
 .item-photos-small {
 	font-size: 0;
 }
@@ -852,6 +907,7 @@ body {
 .item-photos-small img {
 	display: inline-block;
 	margin-right: 20px;
+	box-shadow: 0px 0px 15px 0px rgba(0, 1, 1, 0.2);
 }
 
 .item-photos-small img:last-child {
@@ -916,6 +972,255 @@ body {
  	left: 0;
   width: 8px;
   height: 8px;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 	background-color: #000000;
+}
+
+/* Всплывающая форма */
+
+@-webkit-keyframes bounce {
+  0%   {
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
+  }
+  70%  {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+  90%  {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes bounce {
+  0%   {
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
+  }
+  70%  {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+  90%  {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes shake {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+}
+
+.modal-content {
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  display: none;
+  width: 300px;
+  margin-left: -230px;
+  padding: 50px 80px;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	color: #000000;
+  background: #f8f3f0 url("img/pattern-white.jpg");
+}
+
+.modal-content-map {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  display: none;
+  width: 766px;
+  height: 561px;
+  margin-top: -280px;
+  margin-left: -390px;
+  border: 7px solid #ffffff;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	background: #e9e5dc url("img/map.png");
+}
+
+.modal-content-show {
+  display: block;
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
+}
+
+.modal-error {
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
+}
+
+.modal-content-close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+  width: 22px;
+  height: 22px;
+	border: 0;
+  outline: 0;
+  font-size: 0;
+  cursor: pointer;
+	background-color: transparent;
+}
+
+.modal-content-close::before,
+.modal-content-close::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 2px;
+  width: 19px;
+  height: 3px;
+  border-radius: 1px;
+	background-color: #d0d0d0;
+}
+
+.modal-content-close::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.modal-content-close::after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.modal-content h2 {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.modal-content p {
+  margin: 0;
+  margin-bottom: 14px;
+}
+
+.modal-content .login-form {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+  width: 236px;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  padding-right: 40px;
+	border: 2px solid #000000;
+  outline: none;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  text-transform: uppercase;
+	color: #000000;
+  background-color: #f9f6f3;
+  
+}
+
+.login-form input:focus {
+  border-color: #663d15;
+}
+
+.login-form input.icon-user {
+  background-image: url("img/sprite.png");
+  background-repeat: no-repeat;
+  background-position: 100% -504px;
+}
+
+.login-form input.icon-password {
+  background-image: url("img/sprite.png");
+  background-repeat: no-repeat;
+  background-position: 100% -45px;
+}
+
+.login-form .restore {
+  float: right;
+  color: #000000;
+}
+
+.login-form .btn {
+  width: 100%;
+  margin-top: 15px;
+}
+
+.login-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.login-checkbox {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+.login-checkbox:hover {
+  color: #663d15;
+}
+
+.login-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 17px;
+  height: 17px;
+  border: 2px solid #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before,
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 1px;
+  width: 15px;
+  height: 2px;
+  background-color: #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
